@@ -67,9 +67,25 @@
 	        android:layout_height="wrap_content" android:id="@+id/chkManeuverComplete"
 	        android:text="Maneuver Complete?" android:checked="false">
 	    </CheckBox>
-        <CheckBox android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/chkIncludeSBs"
-            android:text="Include SoftButtons?" android:checked="false">
-        </CheckBox>
+
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1" >
+
+	        <CheckBox
+	            android:id="@+id/chkIncludeSBs"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:checked="false"
+	            android:text="Include" />
+
+	        <Button
+	            android:id="@+id/showconstanttbt_btnSoftButtons"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="Soft Buttons" />
+
+	    </LinearLayout>
 	</LinearLayout>
 </ScrollView>
