@@ -148,6 +148,7 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 	private static final int SCROLLABLEMESSAGE_MAXSOFTBUTTONS = 8;
 	private static final int SHOW_MAXSOFTBUTTONS = 8;
 	private static final int ALERTMANEUVER_MAXSOFTBUTTONS = 3;
+	private static final int SHOWCONSTANTTBT_MAXSOFTBUTTONS = 3;
 
     private static SyncProxyTester _activity;
     private static ArrayList<Object> _logMessages = new ArrayList<Object>();
@@ -2014,7 +2015,7 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 							AlertDialog.Builder builder;
 							AlertDialog dlg;
 							
-							Context mContext = adapter.getContext();
+							final Context mContext = adapter.getContext();
 							LayoutInflater inflater = (LayoutInflater) mContext
 									.getSystemService(LAYOUT_INFLATER_SERVICE);
 							View layout = inflater.inflate(R.layout.showconstanttbt, null);
@@ -2028,7 +2029,36 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 							final EditText txtDistanceToManeuverScale = (EditText) layout.findViewById(R.id.txtDistanceToManeuverScale);
 							
 							final CheckBox chkManeuverComplete = (CheckBox) layout.findViewById(R.id.chkManeuverComplete);
-							final CheckBox chkIncludeSoftButtons = (CheckBox) layout.findViewById(R.id.chkIncludeSBs);
+							chkIncludeSoftButtons = (CheckBox) layout.findViewById(R.id.chkIncludeSBs);
+
+							SoftButton sb1 = new SoftButton();
+							sb1.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
+							sb1.setText("Reply");
+							sb1.setType(SoftButtonType.SBT_TEXT);
+							sb1.setIsHighlighted(false);
+							sb1.setSystemAction(SystemAction.STEAL_FOCUS);
+							SoftButton sb2 = new SoftButton();
+							sb2.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
+							sb2.setText("Close");
+							sb2.setType(SoftButtonType.SBT_TEXT);
+							sb2.setIsHighlighted(false);
+							sb2.setSystemAction(SystemAction.DEFAULT_ACTION);
+							currentSoftButtons = new Vector<SoftButton>();
+							currentSoftButtons.add(sb1);
+							currentSoftButtons.add(sb2);
+
+							Button btnSoftButtons = (Button) layout.findViewById(R.id.showconstanttbt_btnSoftButtons);
+							btnSoftButtons.setOnClickListener(new OnClickListener() {
+								@Override
+								public void onClick(View v) {
+									IntentHelper.addObjectForKey(currentSoftButtons,
+											Const.INTENTHELPER_KEY_SOFTBUTTONSLIST);
+									Intent intent = new Intent(mContext, SoftButtonsListActivity.class);
+									intent.putExtra(Const.INTENT_KEY_SOFTBUTTONS_MAXNUMBER,
+											SHOWCONSTANTTBT_MAXSOFTBUTTONS);
+									startActivityForResult(intent, Const.REQUEST_LIST_SOFTBUTTONS);
+								}
+							});
 							
 							builder = new AlertDialog.Builder(mContext);
 							builder.setPositiveButton("OK", new DialogInterface.OnClickListener() {
@@ -2047,24 +2077,13 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 										msg.setDistanceToManeuverScale((float) Integer.parseInt(txtDistanceToManeuverScale.getText().toString()));
 										msg.setManeuverComplete(chkManeuverComplete.isChecked());
 										msg.setCorrelationID(autoIncCorrId++);
-										if (chkIncludeSoftButtons.isChecked()) {
-											SoftButton sb1 = new SoftButton();
-											sb1.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
-											sb1.setText("Reply");
-											sb1.setType(SoftButtonType.SBT_TEXT);
-											sb1.setIsHighlighted(false);
-											sb1.setSystemAction(SystemAction.STEAL_FOCUS);
-											SoftButton sb2 = new SoftButton();
-											sb2.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
-											sb2.setText("Close");
-											sb2.setType(SoftButtonType.SBT_TEXT);
-											sb2.setIsHighlighted(false);
-											sb2.setSystemAction(SystemAction.DEFAULT_ACTION);
-											Vector<SoftButton> sbarray = new Vector<SoftButton>();
-											sbarray.add(sb1);
-											sbarray.add(sb2);
-											msg.setSoftButtons(sbarray);
+										if (chkIncludeSoftButtons.isChecked() &&
+												(currentSoftButtons != null) &&
+												(currentSoftButtons.size() > 0)) {
+											msg.setSoftButtons(currentSoftButtons);
 										}
+										currentSoftButtons = null;
+										chkIncludeSoftButtons = null;
 										_msgAdapter.logMessage(msg, true);
 										ProxyService.getInstance().getProxyInstance().sendRPCRequest(msg);
 									} catch (SyncException e) {
@@ -2074,6 +2093,8 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 							});
 							builder.setNegativeButton("Cancel", new DialogInterface.OnClickListener() {
 								public void onClick(DialogInterface dialog, int id) {
+									currentSoftButtons = null;
+									chkIncludeSoftButtons = null;
 									dialog.cancel();
 								}
 							});
