@@ -1,4 +1,5 @@
 [CW4]
+* ShowConstantTBT dialog: allow to customize soft buttons.
 + Create DialNumber dialog.
 * Amend AlertManeuver dialog: remove Maneuver complete checkbox and add customizable Soft Buttons.
 * Unify SubscribeVehicleData and UnsubscribeVehicleData dialogs.
